Implement GET /users/:userId route
